--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "mongoose": "^8.18.0",
     "morgan": "^1.10.1",
     "nanoid": "^5.1.5"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
